コメントを入れました

--- a/sample_scipy.ipynb
+++ b/sample_scipy.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "sample_scipy.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM+2dIDzTixocH4qa8kUHPq",
+      "authorship_tag": "ABX9TyOX++8PkYbdEhKuStZF+vHr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -240,6 +240,7 @@
         "https://qiita.com/maskot1977/items/913ef108ff1e2ba5b63f\n",
         "\n",
         "'''\n",
+        "# interpolate：補間をしてくれる関数\n",
         "import numpy as np\n",
         "from scipy import interpolate\n",
         "import matplotlib.pyplot as plt\n",
