Colaboratory を使用して作成しました

--- a/zero.ipynb
+++ b/zero.ipynb
@@ -6,7 +6,7 @@
       "name": "zero.ipynb",
       "provenance": [],
       "mount_file_id": "1d53D8qxbCzKt7Ov_496hZWIfq-Tys4C2",
-      "authorship_tag": "ABX9TyN6pQXXQFrOKCtMTJzZDS04",
+      "authorship_tag": "ABX9TyPckViMb727dsgoPZ+LPoP4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +26,15 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/etckanikama/practice-repository/blob/main/zero.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8x6CUJNjLkvV"
+      },
+      "source": [
+        "ゼロから作るDeepLearningの３章：ニューラルネットワークについての学習過程\n"
       ]
     },
     {
